# moonreview

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  package-lock.json  package.json  tsconfig.json
scripts/: bin-release.sh  build-release.sh  linux-build.Dockerfile  upload-release.sh
src/: agent.rs  api.rs  cli.rs  comments.rs  git.rs  index.html  main.rs  server.rs
web/: build.mjs
web/src/: anchoredComments.test.ts  anchoredComments.ts  api.ts  app.css  comments.test.ts  comments.ts  draftCommentAnchoring.test.ts  draftCommentAnchoring.ts  fullFileView.css  main.tsx  reviewStore.tsx  selectionDraft.test.ts  selectionDraft.ts  theme.tsx  types.ts
web/src/components/: AgentSelect.tsx  Footer.tsx  Header.tsx  LeftSidebar.tsx  SidebarCommentsSection.tsx  SidebarFilesSection.tsx  StatusHeader.tsx  diffStats.ts
web/src/components/hunks/: HunkCard.tsx  HunkCommentContext.tsx  Hunks.tsx  InlineCommentCard.tsx  LineActions.tsx  SelectionComposer.tsx  diffSegments.ts  useHunkComments.ts
